changed the labels in login.components to boostrap, fixed the check box gap and remove the height from the label

--- a/src/app/components/signup/signup.component.css
+++ b/src/app/components/signup/signup.component.css
@@ -100,12 +100,12 @@ input:active {
 .checkboxthingy label {
     font-size: 10px;
     width: 100%;
-    height: 20px;
 }
 
 .flex {
     display: flex;
     margin-bottom: 5px;
+    align-items: center;
 }
 
 select {
